--- a/index.html
+++ b/index.html
@@ -20,34 +20,42 @@
 
     <div class="form-check">
       <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-      <label class="form-check-label" for="flexCheckDefault">
-        Pas de régime alimentaire particulier
+      <label class="form-check-label" id="pas_de_regime" for="flexCheckDefault">
+        Pas de régime alimentaire
       </label>
     </div>
 
     <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="menu_deroulant">
         Liste des régimes alimentaires
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
+        <li><a class="dropdown-item" href="#">Végétarien</a></li>
+        <li><a class="dropdown-item" href="#">Vegan</a></li>
+        <li><a class="dropdown-item" href="#">Hallal</a></li>
       </ul>
     </div>
 
-      
-    
   </div>
 
-  <div class="points">
+  <div class="bouton-suivant">
+    <button type="submit" class="btn btn-primary">SUIVANT</button>
+  </div>
 
-    <div class="point"></div>
-    <div class="point" id="point-jaune"></div>
-    <div class="point"></div>
-    <div class="point"></div>
+  <div class="point_container">
+
+    <div class="points">
+
+      <div class="point"></div>
+      <div class="point"></div>
+      <div class="point" id="point-jaune"></div>
+      <div class="point"></div>
+
+    </div>
 
   </div>
+
+</div>
 
 
 
